--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -27,7 +27,12 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit sit eum nobis iusto impedit minima dolor neque blanditiis ullam, dicta voluptates perspiciatis fugit veritatis, qui at optio veniam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo amet illo magnam officiis in saepe quas distinctio odio, cumque commodi. Maxime perferendis fugiat, eveniet provident sit assumenda odit saepe. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non aspernatur in reprehenderit quibusdam! Sapiente saepe, delectus mollitia laboriosam quia commodi natus. Dolore provident ipsa recusandae, incidunt quod blanditiis. Nulla, inventore!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit sit eum nobis iusto impedit minima dolor neque blanditiis ullam, dicta voluptates perspiciatis fugit veritatis, qui at optio veniam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo amet illo magnam officiis in saepe quas distinctio odio, cumque commodi. Maxime perferendis fugiat, eveniet provident sit assumenda odit saepe. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non aspernatur in reprehenderit quibusdam! Sapiente saepe, delectus mollitia laboriosam quia commodi natus. Dolore provident ipsa recusandae, incidunt quod blanditiis. Nulla, inventore!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit sit eum nobis iusto impedit minima dolor neque blanditiis ullam, dicta voluptates perspiciatis fugit veritatis, qui at optio veniam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo amet illo magnam officiis in saepe quas distinctio odio, cumque commodi. Maxime perferendis fugiat, eveniet provident sit assumenda odit saepe. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non aspernatur in reprehenderit quibusdam! Sapiente saepe, delectus mollitia laboriosam quia commodi natus. Dolore provident ipsa recusandae, incidunt quod blanditiis. Nulla, inventore!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit sit eum nobis iusto impedit minima dolor neque blanditiis ullam, dicta voluptates perspiciatis fugit veritatis, qui at optio veniam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo amet illo magnam officiis in saepe quas distinctio odio, cumque commodi. Maxime perferendis fugiat, eveniet provident sit assumenda odit saepe. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non aspernatur in reprehenderit quibusdam! Sapiente saepe, delectus mollitia laboriosam quia commodi natus. Dolore provident ipsa recusandae, incidunt quod blanditiis. Nulla, inventore!
+        </p>
     </main>
 </body>
 </html>
