--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,13 +12,14 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
             border: 1px solid black;
             padding: 10px;
         }
-
+        
         caption {
             font-size: 1.5em;
             font-weight: bold;
@@ -30,6 +31,13 @@
             background-color: #383838;
             color: white;
         }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         tbody > tr:nth-child(odd) { /* 2n-1 */
             background-color: white;
         }
@@ -181,5 +189,32 @@
                 </tr>
          </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dolor reiciendis, quae quia ab eius ea! Consequuntur mollitia repellat hic eum dolor, optio debitis quaerat quasi explicabo, pariatur asperiores commodi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis aliquid ipsum quae tempore distinctio voluptatum, culpa error sit exercitationem, eos magnam delectus impedit itaque harum illo. Voluptatibus quod earum molestias.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit nisi consequuntur eligendi laboriosam neque illo eveniet id temporibus, dignissimos sunt, doloribus nobis aspernatur provident ipsa! Repudiandae beatae facilis corrupti.
+    </p>
 </body>
 </html>
