--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consequatur non minima impedit veniam sequi ipsam molestiae blanditiis possimus, accusantium facere fugiat tempora laudantium velit, et molestias officia alias rerum.</p>
 
-    <iframe id="tela" name="frame">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ducimus itaque, maxime labore blanditiis delectus eum repellat quam eligendi amet consequuntur cupiditate aliquam, perferendis molestias! Fugiat animi harum dignissimos a. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit omnis, temporibus animi aperiam eveniet repudiandae ratione, culpa quo recusandae, illo aliquam porro consequuntur natus corporis. Ea nesciunt tempora molestiae ab.</p> <img src='imagens/foto-p.png'>"
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
