--- a/exercicios/ex027/flex002/index.html
+++ b/exercicios/ex027/flex002/index.html
@@ -9,7 +9,7 @@
             background-color: lightsalmon;
 
             display: flex;
-            flex-direction: row-reverse;
+            flex-direction: row;
         }
 
         div.item {
