--- a/exercicios/ex027/flex005/index.html
+++ b/exercicios/ex027/flex005/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            background-color: rgb(235, 146, 111);
+            background-color: lightsalmon
         }
 
         main {
